added neural network based on surrogate data

--- a/start.ipynb
+++ b/start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 193,
    "id": "adcd6d36",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 194,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -510,7 +510,7 @@
        "28  5.97           NaN  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 195,
    "id": "40ff27279f31b5f7",
    "metadata": {
     "ExecuteTime": {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 196,
    "id": "bd164005e3812262",
    "metadata": {
     "ExecuteTime": {
@@ -803,7 +803,7 @@
        "Amount (EUR)  0.229195 -8.873762e-02  0.354225  0.387940      1.000000  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 197,
    "id": "7a79ea5def352e9f",
    "metadata": {
     "ExecuteTime": {
@@ -843,10 +843,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fd5cfa02810>"
+       "<matplotlib.collections.PathCollection at 0x7fa4d0fd91d0>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -867,8 +867,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b0ad1df",
+   "metadata": {},
+   "source": [
+    "### Lets try to predict wellbeing with a neural network"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 198,
    "id": "ad1cdd0e",
    "metadata": {},
    "outputs": [
@@ -876,9 +884,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_117483/1786137933.py:4: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/tmp/ipykernel_59908/2365193009.py:5: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_all.fillna(False, inplace=True)\n",
-      "/tmp/ipykernel_117483/1786137933.py:4: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'False' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_59908/2365193009.py:5: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'False' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df_all.fillna(False, inplace=True)\n"
      ]
     }
@@ -889,6 +897,11 @@
     "df_all.reset_index(drop=True, inplace=True)\n",
     "# Fill NaN values with False\n",
     "df_all.fillna(False, inplace=True)\n",
+    "\n",
+    "# Select the features and the target\n",
+    "# Features: meditated, sleep_time, did_sport, steps, sweets, walk, time\n",
+    "# Target: wellbeing\n",
+    "\n",
     "X = df_all[['sleep_time', 'time', 'sweets', 'meditated', 'did_sport', 'walk']]\n",
     "X = X.astype({'meditated': int, 'did_sport': int, 'walk': int, 'sweets': int})  # Convert boolean columns\n",
     "\n",
@@ -904,13 +917,13 @@
     "X_tensor = torch.tensor(X, dtype=torch.float32)\n",
     "y_tensor = torch.tensor(y, dtype=torch.float32).view(-1, 1)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(X_tensor, y_tensor, test_size=0.2, random_state=42)\n",
-    "\n"
+    "# Split the data into training and test set\n",
+    "X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(X_tensor, y_tensor, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 199,
    "id": "595f38df",
    "metadata": {},
    "outputs": [
@@ -918,38 +931,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10, Loss: 34.4287\n",
-      "Epoch 20, Loss: 25.9813\n",
-      "Epoch 30, Loss: 15.9715\n",
-      "Epoch 40, Loss: 7.2953\n",
-      "Epoch 50, Loss: 3.4831\n",
-      "Epoch 60, Loss: 3.3216\n",
-      "Epoch 70, Loss: 3.0808\n",
-      "Epoch 80, Loss: 2.8049\n",
-      "Epoch 90, Loss: 2.6741\n",
-      "Epoch 100, Loss: 2.5455\n",
+      "Epoch 10, Loss: 32.7927\n",
+      "Epoch 20, Loss: 29.0217\n",
+      "Epoch 30, Loss: 25.6379\n",
+      "Epoch 40, Loss: 22.6312\n",
+      "Epoch 50, Loss: 19.9712\n",
+      "Epoch 60, Loss: 17.6224\n",
+      "Epoch 70, Loss: 15.5521\n",
+      "Epoch 80, Loss: 13.7327\n",
+      "Epoch 90, Loss: 12.1396\n",
+      "Epoch 100, Loss: 10.7508\n",
+      "R-squared Score: -4.8656\n",
+      "Mean Absolute Error: 2.7006\n",
+      "Relative Error: 0.4365\n",
       "\n",
-      "Test Loss: 5.4396\n",
-      "R-squared Score: -2.6508\n",
-      "Sample Prediction: 8.7580\n",
-      "Sample True Value: 6.0000\n"
+      "Test Loss: 8.7398\n",
+      "Sample Prediction: 4.4363\n",
+      "Sample True Value: 6.0000\n",
+      "Parameter containing:\n",
+      "tensor([[ 5.2819e-01, -4.2475e-04,  5.5961e-01,  1.2239e+00,  9.4243e-01,\n",
+      "          1.1664e+00]], requires_grad=True)\n"
      ]
     }
    ],
    "source": [
-    "# Create a neural network to predict wellbeing based on the different features\n",
-    "\n",
-    "# Features: meditated, sleep_time, did_sport, steps, sweets, walk, time\n",
-    "# Target: wellbeing\n",
-    "\n",
     "# Define the neural network\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.linear_relu_stack = nn.Sequential( \n",
-    "            nn.Linear(6,6),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(6, 1),\n",
+    "            nn.Linear(6,1),\n",
+    "            # nn.ReLU(),\n",
+    "            # nn.Linear(6, 1),\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -972,21 +985,41 @@
     "    if (epoch + 1) % 10 == 0:  # Print loss every 10 epochs\n",
     "        print(f\"Epoch {epoch+1}, Loss: {loss.item():.4f}\")\n",
     "\n",
-    "# Test the network\n",
+    "# Test and evaluate the network\n",
     "with torch.no_grad():\n",
     "    test_outputs = net(X_test)\n",
-    "    test_loss = criterion(test_outputs, y_test)\n",
+    "    test_loss = loss_fn(test_outputs, y_test)\n",
     "    \n",
-    "    # Calculate R-squared score\n",
-    "    y_pred = test_outputs.numpy()\n",
-    "    y_true = y_test.numpy()\n",
+    "    y_pred = test_outputs.detach().numpy()  # Proper tensor conversion\n",
+    "    y_true = y_test.numpy()  # Ensure y_test is also NumPy\n",
+    "\n",
+    "    # Compute R²\n",
     "    r2 = 1 - np.sum((y_true - y_pred) ** 2) / np.sum((y_true - y_true.mean()) ** 2)\n",
     "\n",
+    "    # Mean Absolute Error (MAE)\n",
+    "    mae = np.mean(np.abs(y_true - y_pred))\n",
+    "\n",
+    "    # Relative Error (RE) - with division safety\n",
+    "    re = np.mean(np.abs((y_true - y_pred) / (y_true + 1e-8)))\n",
+    "\n",
+    "    print(f\"R-squared Score: {r2:.4f}\")\n",
+    "    print(f\"Mean Absolute Error: {mae:.4f}\")\n",
+    "    print(f\"Relative Error: {re:.4f}\")\n",
+    "\n",
+    "    \n",
+    "\n",
     "print(f\"\\nTest Loss: {test_loss.item():.4f}\")\n",
-    "print(f\"R-squared Score: {r2:.4f}\")\n",
     "\n",
     "print(f\"Sample Prediction: {test_outputs[0].item():.4f}\")\n",
-    "print(f\"Sample True Value: {y_test[0].item():.4f}\")\n"
+    "print(f\"Sample True Value: {y_test[0].item():.4f}\")\n",
+    "\n",
+    "# If we use a single linear layer, we can recover the parameters from the network\n",
+    "print(net.linear_relu_stack[0].weight)\n",
+    "\n",
+    "\n",
+    "# example tensor([[0.5257, 0.1423, 1.1832, 0.9429, 0.6883, 0.9817]], requires_grad=True)\n",
+    "# could compare this to the correlation matrix to see if the model is able to recover the parameters\n",
+    "# but we have a REEEALLLY high error so ...."
    ]
   },
   {
@@ -1003,9 +1036,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87b2eb03",
+   "metadata": {},
+   "source": [
+    "### Lets try to predict wellbeing with a simple linear regression model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "4bb675c7",
+   "execution_count": 200,
+   "id": "d1bc2a61",
    "metadata": {},
    "outputs": [
     {
@@ -1065,11 +1106,150 @@
     "plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f099e060",
+   "metadata": {},
+   "source": [
+    "### Training a nn on surrogate data\n",
+    "#### To see if the nn is able to recover the parameters from the surrogate data and to see if our approach works in principle\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "96cda6d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original weights [-0.25091976  0.90142861  0.46398788  0.19731697 -0.68796272 -0.68801096]\n",
+      "R-squared Score: 0.9941\n",
+      "Mean Absolute Error: 0.0806\n",
+      "Relative Error: 0.0624\n",
+      "recovered weights\n",
+      "Parameter containing:\n",
+      "tensor([[-0.2440,  0.8934,  0.4376,  0.1920, -0.6808, -0.6073]],\n",
+      "       requires_grad=True)\n",
+      "\n",
+      "error\n",
+      "0.010096750222146511\n",
+      "0.99412614\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Lets create some surrogate data and train a nn on it, because we have so little data\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)  # Set a random seed for PyTorch\n",
+    "num_features = 6\n",
+    "boolean_features = 0\n",
+    "total_features = num_features + boolean_features\n",
+    "\n",
+    "# Create a simple function to generate surrogate data\n",
+    "def generate_surrogate_data(n_samples=50, n_num_features=6, n_boolean_features=0):\n",
+    "    \"\"\"\n",
+    "    Generate surrogate data with random correlations between features.\n",
+    "    \"\"\"\n",
+    "    total_features = n_num_features + n_boolean_features\n",
+    "    # Generate random weights for each feature\n",
+    "    weights = np.random.uniform(-1, 1, total_features)\n",
+    "    print(\"original weights\", weights)\n",
+    "    # Generate random data\n",
+    "    boolean_data = np.random.randint(0, 2, (n_samples, n_boolean_features))\n",
+    "    num_data = np.random.randn(n_samples, n_num_features)\n",
+    "    data = np.concatenate([boolean_data, num_data], axis=1)\n",
+    "    # Calculate the target as a linear combination of the features\n",
+    "    target = np.dot(data, weights) \n",
+    "    return data, target\n",
+    "\n",
+    "# Generate surrogate data\n",
+    "data, target = generate_surrogate_data(n_num_features=num_features, n_boolean_features=boolean_features)\n",
+    "\n",
+    "# Split the data into training and test set\n",
+    "X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(data, target, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Convert to PyTorch tensors\n",
+    "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)\n",
+    "\n",
+    "X_test_tensor = torch.tensor(X_test, dtype=torch.float32)\n",
+    "y_test_tensor = torch.tensor(y_test, dtype=torch.float32).view(-1, 1)\n",
+    "\n",
+    "# Train a neural network on the surrogate data\n",
+    "class Net2(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net2, self).__init__()\n",
+    "        self.linear_relu_stack = nn.Sequential( \n",
+    "            nn.Linear(total_features, 1),\n",
+    "        )\n",
+    "    def forward(self, x):\n",
+    "        return self.linear_relu_stack(x)\n",
+    "\n",
+    "net = Net2()\n",
+    "\n",
+    "# Define the loss function and optimizer\n",
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = optim.Adam(net.parameters(), lr=0.01)\n",
+    "\n",
+    "for epoch in range(100):\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = net(X_train_tensor)\n",
+    "    loss = loss_fn(outputs, y_train_tensor)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    # if (epoch + 1) % 10 == 0:  # Print loss every 10 epochs\n",
+    "    # print(f\"Epoch {epoch+1}, Loss: {loss.item():.4f}\")\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    test_outputs = net(X_test_tensor)\n",
+    "    test_loss = loss_fn(test_outputs, y_test_tensor)\n",
+    "    \n",
+    "    y_pred = test_outputs.detach().numpy()  # Proper tensor conversion\n",
+    "    y_true = y_test_tensor.numpy()  # Ensure y_test is also NumPy\n",
+    "\n",
+    "    # Compute R²\n",
+    "    r2 = 1 - np.sum((y_true - y_pred) ** 2) / np.sum((y_true - y_true.mean()) ** 2)\n",
+    "\n",
+    "    # Mean Absolute Error (MAE)\n",
+    "    mae = np.mean(np.abs(y_true - y_pred))\n",
+    "\n",
+    "    # Relative Error (RE) - with division safety\n",
+    "    re = np.mean(np.abs((y_true - y_pred) / (y_true + 1e-8)))\n",
+    "\n",
+    "    print(f\"R-squared Score: {r2:.4f}\")\n",
+    "    print(f\"Mean Absolute Error: {mae:.4f}\")\n",
+    "    print(f\"Relative Error: {re:.4f}\")\n",
+    "\n",
+    "print(\"recovered weights\")\n",
+    "print(net.linear_relu_stack[0].weight)\n",
+    "print()\n",
+    "\n",
+    "print(\"error\")\n",
+    "print(test_loss.item())\n",
+    "print(r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b668a797",
+   "metadata": {},
+   "source": [
+    "As we can see, the nn is able to recover the parameters from the surrogate data with a high accuracy.\n",
+    "Furthmore the error is very low, which is good. Even with a low number of samples (50), the nn is able to recover the parameters quite well.\n",
+    "\n",
+    "To be fair, the data is very simple and only has this linear relationship, so it is not surprising that the nn is able to recover the parameters.\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -1083,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
